Fix collapse on mobile

--- a/styles/card_base.css
+++ b/styles/card_base.css
@@ -15,6 +15,8 @@
     flex-direction: column;
     padding: 1vh;
     padding-top: 2vh;
+    padding-left: 1vh;
+    padding-right: 2vh;
 }
 .card-text-content > h1 {
     text-transform: uppercase;
@@ -37,7 +39,7 @@
 }
 
 .card-text-desc {
-    height: 20vh;
+    max-height: 20vh;
     overflow: hidden;
     text-align: justify !important;
 }
@@ -63,6 +65,9 @@
 }
 
 @media (min-width: 540px) {
+    .card-text-content {
+        padding-left: 0;
+    }
     .card-base {
         max-height: 40vh !important;
     }
@@ -70,7 +75,6 @@
         display: none;
     }
     .card-text-desc {
-        visibility: visible !important;
         display: block !important;
     }
     .card-img img {
